--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -1,70 +1,50 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".SignInActivity">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:gravity="center_horizontal"
+	android:orientation="vertical"
+	android:padding="@dimen/sign_in_margin"
+	tools:context=".activity.SignInActivity">
 
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone"/>
+	<EditText
+		android:id="@+id/sign_in_email"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:hint="@string/email"
+		android:inputType="textEmailAddress"
+		android:maxLines="1"
+		android:singleLine="true"
+		android:text="test@liferay.com" />
 
-    <ScrollView
-        android:id="@+id/login_form"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+	<EditText
+		android:id="@+id/sign_in_password"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:hint="@string/password"
+		android:imeActionId="@+id/sing_in"
+		android:imeActionLabel="@string/sign_in"
+		android:imeOptions="actionUnspecified"
+		android:inputType="textPassword"
+		android:maxLines="1"
+		android:singleLine="true"
+		android:text="test" />
 
-            <LinearLayout
-                android:id="@+id/email_login_form"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
+	<EditText
+		android:id="@+id/sign_in_server"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:hint="@string/server"
+		android:inputType="text"
+		android:maxLines="1"
+		android:singleLine="true"
+		android:text="http://192.168.56.1:8080" />
 
-                <AutoCompleteTextView
-                    android:id="@+id/email"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true"/>
-
-                <EditText
-                    android:id="@+id/password"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true"/>
-
-                <Button
-                    android:id="@+id/email_sign_in_button"
-                    style="?android:textAppearanceSmall"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="@string/action_sign_in"
-                    android:textStyle="bold"/>
-
-            </LinearLayout>
-    </ScrollView>
-
+	<Button
+		android:id="@+id/sign_in_button"
+		style="?android:textAppearanceSmall"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/sign_in_margin"
+		android:text="@string/sign_in"
+		android:textStyle="bold" />
 </LinearLayout>
-
-
-
