--- a/app/src/main/res/layout/sign_in.xml
+++ b/app/src/main/res/layout/sign_in.xml
@@ -37,7 +37,7 @@
 		android:inputType="text"
 		android:maxLines="1"
 		android:singleLine="true"
-		android:text="http://192.168.56.1:8080" />
+		android:text="http://10.0.2.2:8080" />
 
 	<Button
 		android:id="@+id/sign_in_button"
@@ -45,6 +45,7 @@
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="@dimen/sign_in_margin"
+		android:enabled="false"
 		android:text="@string/sign_in"
 		android:textStyle="bold" />
 </LinearLayout>
