--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,5 +4,19 @@
 	android:background="@color/main_background"
 	android:gravity="center_horizontal"
 	android:orientation="vertical"
-	android:padding="@dimen/sign_in_margin"
-	tools:context=".activity.SignInActivity" />
+	android:padding="@dimen/main_padding"
+	tools:context=".activity.MainActivity">
+
+	<com.liferay.alerts.widget.CardView
+		android:layout_width="match_parent"
+		android:layout_height="100dp"
+		android:background="@drawable/card_background"
+		android:padding="@dimen/card_padding">
+
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:text="@string/welcome"
+			android:fontFamily="sans-serif-light" />
+	</com.liferay.alerts.widget.CardView>
+</LinearLayout>
