--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<color name="card_background">@android:color/white</color>
+	<color name="card_border">#D4D4D4</color>
 	<color name="main_background">#F7F7F7</color>
 </resources>
