--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,4 +1,8 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:liferay="http://schemas.android.com/apk/res-auto"
+	android:id="@+id/card_list"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/main_background"
@@ -10,13 +14,7 @@
 	<com.liferay.alerts.widget.CardView
 		android:layout_width="match_parent"
 		android:layout_height="100dp"
+		android:padding="@dimen/card_padding"
 		android:background="@drawable/card_background"
-		android:padding="@dimen/card_padding">
-
-		<TextView
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:text="@string/welcome"
-			android:fontFamily="sans-serif-light" />
-	</com.liferay.alerts.widget.CardView>
+		liferay:text="@string/welcome" />
 </LinearLayout>
