--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,4 +1,5 @@
 <resources>
+	<dimen name="card_minHeight">100dp</dimen>
 	<dimen name="card_padding">16dp</dimen>
 	<dimen name="main_padding">11dp</dimen>
 </resources>
