--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,3 +1,10 @@
 <resources>
-	<style name="DefaultTheme" parent="android:Theme.Holo.Light.DarkActionBar" />
+	<style name="DefaultTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+		<item name="android:actionBarStyle">@style/DefaultActionBar</item>
+	</style>
+
+	<style name="DefaultActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+		<item name="android:background">@drawable/actionbar_background</item>
+		<item name="android:logo">@android:color/transparent</item>
+	</style>
 </resources>
