--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,11 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/card_list"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="@color/main_background"
 	android:orientation="vertical"
-	android:padding="@dimen/main_padding"
+	android:divider="@drawable/divider"
+	android:showDividers="middle"
 	tools:context=".activity.MainActivity">
+
+	<FrameLayout
+		android:layout_width="match_parent"
+		android:layout_height="@dimen/top_bar_height"
+		android:background="@drawable/top_bar_background" />
+
+	<LinearLayout
+		android:id="@+id/card_list"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@color/main_background"
+		android:orientation="vertical"
+		android:paddingTop="@dimen/card_list_padding_top"
+		android:paddingRight="@dimen/card_list_padding"
+		android:paddingBottom="@dimen/card_list_padding"
+		android:paddingLeft="@dimen/card_list_padding" />
 </LinearLayout>
