--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="actionbar_background">#FFD12B</color>
 	<color name="card_background">@android:color/white</color>
 	<color name="card_border">#D4D4D4</color>
 	<color name="main_background">#F7F7F7</color>
+	<color name="top_bar_background">#FBD22A</color>
+	<color name="top_bar_background_center">#FFD12B</color>
+	<color name="top_bar_margin_stroke">#E4C143</color>
 </resources>
