--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,5 +1,7 @@
 <resources>
+	<dimen name="card_list_padding">10.5dp</dimen>
+	<dimen name="card_list_padding_top">50dp</dimen>
 	<dimen name="card_minHeight">100dp</dimen>
 	<dimen name="card_padding">16dp</dimen>
-	<dimen name="main_padding">10.5dp</dimen>
+	<dimen name="top_bar_height">111dp</dimen>
 </resources>
