--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,3 @@
 <resources>
-	<style name="DefaultTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
-		<item name="android:actionBarStyle">@style/DefaultActionBar</item>
-	</style>
-
-	<style name="DefaultActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-		<item name="android:background">@drawable/actionbar_background</item>
-		<item name="android:logo">@android:color/transparent</item>
-	</style>
+	<style name="DefaultTheme" parent="@android:style/Theme.Holo.NoActionBar" />
 </resources>
