--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<dimen name="card_list_padding">10.5dp</dimen>
 	<dimen name="card_list_padding_top">50dp</dimen>
