--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -5,5 +5,6 @@
 		android:id="@+id/text"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
+		android:textColor="@color/card_text_color"
 		android:fontFamily="sans-serif-light" />
 </merge>
