--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -21,11 +21,10 @@
 		<LinearLayout
 			android:id="@+id/card_list"
 			android:layout_width="match_parent"
-			android:layout_height="match_parent"
+			android:layout_height="wrap_content"
 			android:orientation="vertical"
 			android:paddingTop="@dimen/card_list_padding_top"
 			android:paddingRight="@dimen/card_list_padding"
-			android:paddingBottom="@dimen/card_list_padding"
 			android:paddingLeft="@dimen/card_list_padding" />
 	</ScrollView>
 </LinearLayout>
