--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
 
+	<ImageView
+		android:id="@+id/portrait"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:padding="@dimen/card_list_padding" />
+
 	<TextView
 		android:id="@+id/text"
-		android:layout_width="match_parent"
-		android:layout_height="match_parent"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
 		android:layout_marginBottom="@dimen/card_list_padding"
 		android:padding="@dimen/card_padding"
 		android:minHeight="@dimen/card_minHeight"
