--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -4,5 +4,6 @@
 	<dimen name="card_list_padding_top">50dp</dimen>
 	<dimen name="card_minHeight">100dp</dimen>
 	<dimen name="card_padding">16dp</dimen>
+	<dimen name="portrait_width">35dp</dimen>
 	<dimen name="top_bar_height">111dp</dimen>
 </resources>
