--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/main_background"
-	android:orientation="vertical"
-	android:divider="@drawable/divider"
-	android:showDividers="middle"
 	tools:context=".activity.MainActivity">
-
-	<FrameLayout
-		android:layout_width="match_parent"
-		android:layout_height="@dimen/top_bar_height"
-		android:background="@drawable/top_bar_background" />
 
 	<ScrollView
 		android:layout_width="match_parent"
@@ -27,4 +19,10 @@
 			android:paddingRight="@dimen/card_list_padding"
 			android:paddingLeft="@dimen/card_list_padding" />
 	</ScrollView>
-</LinearLayout>
+
+	<FrameLayout
+		android:layout_width="match_parent"
+		android:layout_height="@dimen/top_bar_height"
+		android:background="@drawable/top_bar_background"
+		android:alpha="@dimen/top_bar_alpha" />
+</FrameLayout>
