--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<dimen name="card_list_padding">10.5dp</dimen>
-	<dimen name="card_list_padding_top">50dp</dimen>
+	<dimen name="card_list_padding_top">110dp</dimen>
 	<dimen name="card_minHeight">100dp</dimen>
 	<dimen name="card_padding">16dp</dimen>
 	<dimen name="portrait_width">35dp</dimen>
-	<dimen name="top_bar_height">111dp</dimen>
+	<item name="top_bar_alpha" format="float" type="dimen">0.95</item>
+	<dimen name="top_bar_height">70dp</dimen>
 </resources>
