vertical line on background

--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -5,7 +5,7 @@
 		android:id="@+id/portrait"
 		android:layout_width="@dimen/portrait_width"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="@dimen/card_list_padding"
+		android:layout_marginTop="@dimen/portrait_margin_top"
 		android:layout_marginRight="@dimen/card_list_padding" />
 
 	<TextView
