--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
 	<color name="card_background">@android:color/white</color>
 	<color name="card_border">#D4D4D4</color>
+	<color name="card_list_vertical_line">#ECEDEE</color>
 	<color name="card_text_color">#233240</color>
 	<color name="main_background">#F7F7F7</color>
 	<color name="top_bar_background">#FBD22A</color>
