--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+	<dimen name="card_badge_padding">8dp</dimen>
 	<dimen name="card_list_padding">10.5dp</dimen>
 	<dimen name="card_list_padding_top">110dp</dimen>
 	<dimen name="card_list_vertical_line_margin_left">27.5dp</dimen>
 	<dimen name="card_list_vertical_line_width">2dp</dimen>
-	<dimen name="card_minHeight">100dp</dimen>
+	<dimen name="card_minHeight">40dp</dimen>
 	<dimen name="card_padding">16dp</dimen>
+	<dimen name="card_text_size">16sp</dimen>
+	<dimen name="card_timestamp_margin_top">-1.5dp</dimen>
+	<dimen name="card_timestamp_padding_left">5dp</dimen>
+	<dimen name="card_timestamp_text_size">12sp</dimen>
 	<dimen name="portrait_margin_top">14dp</dimen>
 	<dimen name="portrait_width">35dp</dimen>
-	<item name="top_bar_alpha" format="float" type="dimen">0.95</item>
+	<item name="top_bar_alpha" format="float" type="dimen">0.9</item>
 	<dimen name="top_bar_height">70dp</dimen>
 </resources>
