--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -5,25 +5,25 @@
 		android:id="@+id/portrait"
 		android:layout_width="@dimen/portrait_width"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="@dimen/portrait_margin_top"
-		android:layout_marginRight="@dimen/card_list_padding" />
+		android:layout_marginRight="@dimen/card_list_padding"
+		android:layout_marginTop="@dimen/portrait_margin_top" />
 
 	<LinearLayout
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="@dimen/card_list_padding"
 		android:layout_weight="1"
-		android:orientation="vertical"
+		android:background="@drawable/card_background"
 		android:minHeight="@dimen/card_minHeight"
-		android:background="@drawable/card_background">
+		android:orientation="vertical">
 
 		<TextView
 			android:id="@+id/text"
 			android:layout_width="match_parent"
 			android:layout_height="0dp"
 			android:layout_weight="1"
-			android:padding="@dimen/card_padding"
 			android:fontFamily="sans-serif-light"
+			android:padding="@dimen/card_padding"
 			android:textColor="@color/card_text"
 			android:textSize="@dimen/card_text_size" />
 
@@ -34,22 +34,22 @@
 				<ImageView
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
-					android:paddingTop="@dimen/card_badge_padding"
-					android:paddingLeft="@dimen/card_badge_padding"
 					android:paddingBottom="@dimen/card_badge_padding"
+					android:paddingLeft="@dimen/card_badge_padding"
+					android:paddingTop="@dimen/card_badge_padding"
 					android:src="@drawable/badge_alert" />
 
 				<TextView
 					android:id="@+id/timestamp"
 					android:layout_width="0dp"
-				    android:layout_height="match_parent"
-				    android:layout_weight="1"
-				    android:gravity="center_vertical"
-				    android:layout_marginTop="@dimen/card_timestamp_margin_top"
-				    android:paddingLeft="@dimen/card_timestamp_padding_left"
-				    android:fontFamily="sans-serif-light"
-				    android:textColor="@color/card_timestamp"
-				    android:textSize="@dimen/card_timestamp_text_size" />
+					android:layout_height="match_parent"
+					android:layout_marginTop="@dimen/card_timestamp_margin_top"
+					android:layout_weight="1"
+					android:fontFamily="sans-serif-light"
+					android:gravity="center_vertical"
+					android:paddingLeft="@dimen/card_timestamp_padding_left"
+					android:textColor="@color/card_timestamp"
+					android:textSize="@dimen/card_timestamp_text_size" />
 		</LinearLayout>
 	</LinearLayout>
 </merge>
