--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -32,4 +32,10 @@
 		android:layout_height="@dimen/top_bar_height"
 		android:alpha="@dimen/top_bar_alpha"
 		android:background="@drawable/top_bar_background" />
+
+	<FrameLayout
+		android:layout_width="match_parent"
+		android:layout_height="?android:attr/actionBarSize"
+		android:layout_gravity="bottom"
+		android:background="@color/navigation_bar_background" />
 </FrameLayout>
