--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -31,7 +31,18 @@
 		android:layout_width="match_parent"
 		android:layout_height="@dimen/top_bar_height"
 		android:alpha="@dimen/top_bar_alpha"
-		android:background="@drawable/top_bar_background" />
+		android:background="@drawable/top_bar_background">
+
+		<TextView
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="bottom"
+			android:layout_marginBottom="@dimen/top_bar_title_margin_bottom"
+			android:layout_marginLeft="@dimen/top_bar_title_margin_left"
+			android:text="@string/app_name"
+			android:textColor="@android:color/white"
+			android:textSize="@dimen/top_bar_title_text_size" />
+	</FrameLayout>
 
 	<FrameLayout
 		android:layout_width="match_parent"
