--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -15,4 +15,7 @@
 	<dimen name="portrait_width">35dp</dimen>
 	<item name="top_bar_alpha" format="float" type="dimen">0.9</item>
 	<dimen name="top_bar_height">70dp</dimen>
+	<dimen name="top_bar_title_margin_bottom">13dp</dimen>
+	<dimen name="top_bar_title_margin_left">16dp</dimen>
+	<dimen name="top_bar_title_text_size">18dp</dimen>
 </resources>
