--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
+	xmlns:liferay="http://schemas.android.com/apk/res-auto"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/main_background"
@@ -24,7 +25,14 @@
 			android:orientation="vertical"
 			android:paddingLeft="@dimen/card_list_padding"
 			android:paddingRight="@dimen/card_list_padding"
-			android:paddingTop="@dimen/card_list_padding_top" />
+			android:paddingTop="@dimen/card_list_padding_top">
+
+			<com.liferay.alerts.widget.CardView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				liferay:text="@string/welcome"
+				liferay:portraitId="10945" />
+		</LinearLayout>
 	</ScrollView>
 
 	<FrameLayout
