--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:tools="http://schemas.android.com/tools"
 	xmlns:liferay="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/main_background"
@@ -30,8 +30,20 @@
 			<com.liferay.alerts.widget.CardView
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				liferay:text="@string/welcome"
-				liferay:portraitId="10945" />
+				liferay:portraitId="10945"
+				liferay:text="@string/welcome" />
+
+			<TextView
+				android:id="@+id/version"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="center_horizontal"
+				android:layout_marginBottom="?android:attr/actionBarSize"
+				android:layout_marginTop="@dimen/version_margin_top"
+				android:fontFamily="sans-serif-light"
+				android:paddingBottom="@dimen/version_padding_bottom"
+				android:text="version 0.1.0"
+				android:textSize="@dimen/version_text_size" />
 		</LinearLayout>
 	</ScrollView>
 
