--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -18,4 +18,7 @@
 	<dimen name="top_bar_title_margin_bottom">13dp</dimen>
 	<dimen name="top_bar_title_margin_left">16dp</dimen>
 	<dimen name="top_bar_title_text_size">18dp</dimen>
+	<dimen name="version_margin_top">10dp</dimen>
+	<dimen name="version_padding_bottom">8dp</dimen>
+	<dimen name="version_text_size">10dp</dimen>
 </resources>
