--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -27,6 +27,12 @@
 			android:textColor="@color/card_text"
 			android:textSize="@dimen/card_text_size" />
 
+		<ImageView
+			android:id="@+id/image"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:padding="@dimen/card_image_padding" />
+
 		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="match_parent">
