--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -62,6 +62,18 @@
 			android:text="@string/app_name"
 			android:textColor="@android:color/white"
 			android:textSize="@dimen/top_bar_title_text_size" />
+
+		<TextView
+			android:id="@+id/send"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="bottom|right"
+			android:layout_marginBottom="@dimen/top_bar_title_margin_bottom"
+			android:layout_marginRight="@dimen/top_bar_title_margin_left"
+			android:visibility="invisible"
+		    android:text="@string/send"
+		    android:textColor="@android:color/white"
+		    android:textSize="@dimen/top_bar_send_text_size" />
 	</FrameLayout>
 
 	<FrameLayout
