--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -14,8 +14,10 @@
 	<dimen name="card_timestamp_text_size">13sp</dimen>
 	<dimen name="portrait_margin_top">14dp</dimen>
 	<dimen name="portrait_width">35dp</dimen>
+	<dimen name="send_notification_message_height">200dp</dimen>
 	<item name="top_bar_alpha" format="float" type="dimen">0.9</item>
 	<dimen name="top_bar_height">70dp</dimen>
+	<dimen name="top_bar_send_text_size">16dp</dimen>
 	<dimen name="top_bar_title_margin_bottom">13dp</dimen>
 	<dimen name="top_bar_title_margin_left">16dp</dimen>
 	<dimen name="top_bar_title_text_size">18dp</dimen>
