--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -54,25 +54,26 @@
 		android:background="@drawable/top_bar_background">
 
 		<TextView
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_gravity="bottom"
-			android:layout_marginBottom="@dimen/top_bar_title_margin_bottom"
-			android:layout_marginLeft="@dimen/top_bar_title_margin_left"
-			android:text="@string/app_name"
-			android:textColor="@android:color/white"
-			android:textSize="@dimen/top_bar_title_text_size" />
-
-		<TextView
 			android:id="@+id/send"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="bottom|right"
-			android:layout_marginBottom="@dimen/top_bar_title_margin_bottom"
-			android:layout_marginRight="@dimen/top_bar_title_margin_left"
 			android:visibility="invisible"
 		    android:text="@string/send"
 		    android:textColor="@android:color/white"
 		    android:textSize="@dimen/top_bar_send_text_size" />
+
+		<View
+			android:layout_width="match_parent"
+			android:layout_height="@dimen/top_bar_divider_height"
+			android:layout_gravity="bottom"
+			android:background="@color/top_bar_divider" />
 	</FrameLayout>
+
+	<ImageView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="@dimen/top_bar_title_margin_top"
+		android:layout_marginLeft="@dimen/top_bar_title_margin_left"
+		android:background="@drawable/top_bar_icon" />
 </FrameLayout>
