--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -15,11 +15,12 @@
 	<dimen name="portrait_margin_top">14dp</dimen>
 	<dimen name="portrait_width">35dp</dimen>
 	<dimen name="send_notification_message_height">200dp</dimen>
-	<item name="top_bar_alpha" format="float" type="dimen">0.9</item>
-	<dimen name="top_bar_height">70dp</dimen>
+	<item name="top_bar_alpha" format="float" type="dimen">0.95</item>
+	<dimen name="top_bar_divider_height">0.6dp</dimen>
+	<dimen name="top_bar_height">74.6dp</dimen>
 	<dimen name="top_bar_send_text_size">16dp</dimen>
-	<dimen name="top_bar_title_margin_bottom">13dp</dimen>
-	<dimen name="top_bar_title_margin_left">16dp</dimen>
+	<dimen name="top_bar_title_margin_left">-5.3dp</dimen>
+	<dimen name="top_bar_title_margin_top">-2dp</dimen>
 	<dimen name="top_bar_title_text_size">18dp</dimen>
 	<dimen name="version_margin_top">10dp</dimen>
 	<dimen name="version_padding_bottom">8dp</dimen>
