--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
 	<color name="card_background">@android:color/white</color>
 	<color name="card_border">#D4D4D4</color>
-	<color name="card_list_vertical_line">#ECEDEE</color>
+	<color name="card_list_vertical_line">#DADAD3</color>
 	<color name="card_text">#233240</color>
 	<color name="card_timestamp">#A7ADB3</color>
 	<color name="top_bar_background">#FBD22A</color>
