--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<color name="card_background">@android:color/white</color>
-	<color name="card_border">#D4D4D4</color>
+	<color name="card_border">#A7ADB3</color>
 	<color name="card_list_vertical_line">#DADAD3</color>
 	<color name="card_text">#233240</color>
 	<color name="card_timestamp">#A7ADB3</color>
