adjusting arrow dimensions

--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -11,6 +11,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginBottom="@dimen/card_margin_bottom"
+		android:layout_marginLeft="@dimen/card_margin_left"
 		android:layout_marginTop="@dimen/card_margin_top"
 		android:layout_weight="1"
 		android:minHeight="@dimen/card_minHeight"
