--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -6,7 +6,8 @@
 	<item name="card_corner_radius" format="float" type="dimen">17</item>
 	<dimen name="card_badge_padding">8dp</dimen>
 	<dimen name="card_image_padding">1dp</dimen>
-	<dimen name="card_list_padding">14dp</dimen>
+	<dimen name="card_list_padding_left">14dp</dimen>
+	<dimen name="card_list_padding_right">17.3dp</dimen>
 	<dimen name="card_list_padding_top">88dp</dimen>
 	<dimen name="card_list_vertical_line_margin_left">37.6dp</dimen>
 	<dimen name="card_list_vertical_line_width">0.6dp</dimen>
@@ -14,8 +15,10 @@
 	<dimen name="card_margin_left">8dp</dimen>
 	<dimen name="card_margin_top">4dp</dimen>
 	<dimen name="card_minHeight">40dp</dimen>
-	<dimen name="card_padding">16dp</dimen>
-	<dimen name="card_text_size">16sp</dimen>
+	<dimen name="card_padding_left">17.3dp</dimen>
+	<dimen name="card_padding_right">11.3dp</dimen>
+	<dimen name="card_padding_top">9dp</dimen>
+	<dimen name="card_text_size">14sp</dimen>
 	<dimen name="card_timestamp_margin_top">-9.5dp</dimen>
 	<dimen name="card_timestamp_padding_left">5dp</dimen>
 	<dimen name="card_timestamp_text_size">13sp</dimen>
