--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android">
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:liferay="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
 
 	<ImageView
 		android:id="@+id/portrait"
@@ -28,7 +30,8 @@
 			android:paddingRight="@dimen/card_padding_right"
 			android:paddingTop="@dimen/card_padding_top"
 			android:textColor="@color/card_text"
-			android:textSize="@dimen/card_text_size" />
+			android:textSize="@dimen/card_text_size"
+			tools:text="Hello world! This is a sample notification!" />
 
 		<ImageView
 			android:id="@+id/image"
@@ -37,27 +40,31 @@
 			android:padding="@dimen/card_image_padding" />
 
 		<LinearLayout
-			android:layout_width="match_parent"
-			android:layout_height="match_parent">
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="right">
 
-				<ImageView
+				<com.liferay.alerts.widget.TextView
 					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:paddingBottom="@dimen/card_badge_padding"
-					android:paddingLeft="@dimen/card_badge_padding"
-					android:src="@drawable/launcher_small" />
+					android:layout_height="match_parent"
+					android:text="@string/icon_timestamp"
+					android:textColor="@color/card_timestamp"
+					android:textSize="@dimen/card_timestamp_icon_size"
+					liferay:font="icons" />
 
 				<TextView
 					android:id="@+id/timestamp"
 					android:layout_width="0dp"
 					android:layout_height="match_parent"
-					android:layout_marginTop="@dimen/card_timestamp_margin_top"
 					android:layout_weight="1"
+					android:paddingBottom="@dimen/card_timestamp_text_padding_bottom"
+					android:paddingLeft="@dimen/card_timestamp_text_padding_left"
+					android:paddingRight="@dimen/card_timestamp_text_padding_right"
 					android:fontFamily="sans-serif-light"
 					android:gravity="center_vertical"
-					android:paddingLeft="@dimen/card_timestamp_padding_left"
 					android:textColor="@color/card_timestamp"
-					android:textSize="@dimen/card_timestamp_text_size" />
+					android:textSize="@dimen/card_timestamp_text_size"
+					tools:text="5m" />
 		</LinearLayout>
 	</LinearLayout>
 </merge>
