--- a/app/src/main/res/drawable/type_map_background.xml
+++ b/app/src/main/res/drawable/type_map_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-	<solid android:color="@color/badge_message_background" />
-	<corners android:radius="@dimen/badge_radius" />
+	<solid android:color="@color/type_map_background" />
+	<corners android:radius="@dimen/card_type_radius" />
 </shape>
