--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -3,9 +3,6 @@
 	<dimen name="card_arrow_height">6dp</dimen>
 	<dimen name="card_arrow_width">10.3dp</dimen>
 	<dimen name="card_arrow_y">14.6dp</dimen>
-	<dimen name="card_badge_margin_left">-17dp</dimen>
-	<dimen name="card_badge_padding_bottom">0.6dp</dimen>
-	<dimen name="card_badge_padding_left">0.3dp</dimen>
 	<item name="card_corner_radius" format="float" type="dimen">17</item>
 	<dimen name="card_image_padding">1dp</dimen>
 	<dimen name="card_list_padding_left">14dp</dimen>
@@ -27,10 +24,13 @@
 	<dimen name="card_timestamp_text_padding_left">2.6dp</dimen>
 	<dimen name="card_timestamp_text_padding_right">6.3dp</dimen>
 	<dimen name="card_timestamp_text_size">12dp</dimen>
+	<dimen name="card_type_margin_left">-17dp</dimen>
+	<dimen name="card_type_padding_bottom">0.6dp</dimen>
+	<dimen name="card_type_padding_left">0.3dp</dimen>
+	<dimen name="card_type_radius">9.5dp</dimen>
+	<dimen name="card_type_size">19dp</dimen>
+	<dimen name="card_type_text">9.3dp</dimen>
 	<dimen name="portrait_diameter">48dp</dimen>
-	<dimen name="badge_message">9.3dp</dimen>
-	<dimen name="badge_radius">9.5dp</dimen>
-	<dimen name="badge_size">19dp</dimen>
 	<dimen name="send_notification_message_height">200dp</dimen>
 	<item name="top_bar_alpha" format="float" type="dimen">0.95</item>
 	<dimen name="top_bar_divider_height">0.6dp</dimen>
