--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -49,11 +49,22 @@
 			android:textSize="@dimen/card_text_size"
 			tools:text="Hello world! This is a sample notification!" />
 
+		<TextView
+			android:id="@+id/link"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:paddingLeft="@dimen/card_padding_left"
+			android:paddingRight="@dimen/card_padding_right"
+			android:fontFamily="sans-serif-light"
+			android:textColor="@color/type_link_background"
+			android:visibility="gone" />
+
 		<ImageView
 			android:id="@+id/image"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:padding="@dimen/card_image_padding" />
+			android:padding="@dimen/card_image_padding"
+			android:visibility="gone" />
 
 		<LinearLayout
 			android:layout_width="wrap_content"
