--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
 	<color name="top_bar_background">#FBD22A</color>
 	<color name="top_bar_background_center">#FFD12B</color>
 	<color name="top_bar_divider">#E4C143</color>
+	<color name="top_bar_vertical_line">#D9B73F</color>
 	<color name="type_image_background">#33C749</color>
 	<color name="type_link_background">#647EFB</color>
 	<color name="type_map_background">#FF5653</color>
