--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -59,6 +59,7 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_gravity="bottom|right"
+			android:padding="10dp"
 			android:visibility="invisible"
 		    android:text="@string/send"
 		    android:textColor="@android:color/white"
