--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -81,7 +81,7 @@
 	<ImageView
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="@dimen/top_bar_title_margin_top"
-		android:layout_marginLeft="@dimen/top_bar_title_margin_left"
+		android:layout_marginTop="@dimen/top_bar_icon_margin_top"
+		android:layout_marginLeft="@dimen/top_bar_icon_left"
 		android:background="@drawable/top_bar_icon" />
 </FrameLayout>
