--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -25,12 +25,6 @@
 	<dimen name="card_timestamp_text_padding_left">2.6dp</dimen>
 	<dimen name="card_timestamp_text_padding_right">6.3dp</dimen>
 	<dimen name="card_timestamp_text_size">12dp</dimen>
-	<dimen name="card_type_margin_left">-17.3dp</dimen>
-	<dimen name="card_type_padding_bottom">1.3dp</dimen>
-	<dimen name="card_type_padding_left">0.3dp</dimen>
-	<dimen name="card_type_radius">9.5dp</dimen>
-	<dimen name="card_type_size">19dp</dimen>
-	<dimen name="card_type_text">9.3dp</dimen>
 	<dimen name="portrait_diameter">48dp</dimen>
 	<dimen name="send_notification_message_height">200dp</dimen>
 	<item name="top_bar_alpha" format="float" type="dimen">0.95</item>
@@ -39,6 +33,15 @@
 	<dimen name="top_bar_icon_left">-5.3dp</dimen>
 	<dimen name="top_bar_icon_margin_top">-2dp</dimen>
 	<dimen name="top_bar_send_text_size">16dp</dimen>
+	<dimen name="type_link_padding_left">0.3dp</dimen>
+	<dimen name="type_link_padding_top">0.3dp</dimen>
+	<dimen name="type_link_text">10.6dp</dimen>
+	<dimen name="type_margin_left">-17.3dp</dimen>
+	<dimen name="type_padding_bottom">1.3dp</dimen>
+	<dimen name="type_radius">9.5dp</dimen>
+	<dimen name="type_size">19dp</dimen>
+	<dimen name="type_text">9.3dp</dimen>
+	<dimen name="type_text_padding_left">0.6dp</dimen>
 	<dimen name="version_margin_top">10dp</dimen>
 	<dimen name="version_padding_bottom">8dp</dimen>
 	<dimen name="version_text_size">10dp</dimen>
