--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -44,6 +44,7 @@
 			android:paddingLeft="@dimen/card_padding_left"
 			android:paddingRight="@dimen/card_padding_right"
 			android:paddingTop="@dimen/card_padding_top"
+			android:lineSpacingMultiplier="@dimen/card_text_line_spacing_multiplier"
 			android:textColor="@color/card_text"
 			android:textSize="@dimen/card_text_size"
 			tools:text="Hello world! This is a sample notification!" />
