--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -84,4 +84,30 @@
 		android:layout_marginTop="@dimen/top_bar_icon_margin_top"
 		android:layout_marginLeft="@dimen/top_bar_icon_left"
 		android:background="@drawable/top_bar_icon" />
+
+	<com.liferay.alerts.widget.TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="@dimen/top_bar_last_alert_margin_left"
+		android:layout_marginTop="@dimen/top_bar_last_alert_margin_top"
+		android:text="@string/last_alert_from"
+		android:textColor="@color/top_bar_last_alert"
+		android:textSize="@dimen/top_bar_last_alert_text_size"
+		liferay:font="roboto_medium"
+		tools:text="@string/last_alert_from" />
+
+	<com.liferay.alerts.widget.TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="@dimen/top_bar_user_name_margin_left"
+		android:layout_marginTop="@dimen/top_bar_user_name_margin_top"
+		android:text="Zeno Rocha"
+		android:textColor="@color/top_bar_user_name"
+		android:textSize="@dimen/top_bar_user_name_text_size"
+		android:shadowColor="@color/top_bar_user_name_shadow"
+		android:shadowDy="2"
+		android:shadowDx="0"
+		android:shadowRadius="0.1"
+		liferay:font="roboto_medium"
+		tools:text="Zeno Rocha" />
 </FrameLayout>
