--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,8 +8,9 @@
 	<declare-styleable name="TextView">
 		<attr name="font" format="enum">
 			<enum name="roboto_light" value="0" />
-			<enum name="roboto_regular" value="1" />
-			<enum name="icons" value="2" />
+			<enum name="roboto_medium" value="1" />
+			<enum name="roboto_regular" value="2" />
+			<enum name="icons" value="3" />
 		</attr>
 	</declare-styleable>
 </resources>
