--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -65,7 +65,8 @@
 			android:id="@+id/image"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:padding="@dimen/card_image_padding"
+			android:paddingLeft="@dimen/card_image_padding_left"
+			android:paddingRight="@dimen/card_image_padding_right"
 			android:visibility="gone" />
 
 		<LinearLayout
