--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
 	<color name="type_image_background">#33C749</color>
 	<color name="type_link_background">#647EFB</color>
 	<color name="type_map_background">#FF5653</color>
+	<color name="type_polls_background">#9552EF</color>
 	<color name="type_text">@android:color/white</color>
 	<color name="type_text_background">#FC5B3F</color>
 </resources>
