--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
 	<color name="card_list_vertical_line">#DADAD3</color>
 	<color name="card_text">#233240</color>
 	<color name="card_timestamp">#A7ADB3</color>
+	<color name="radio_button_checked">#FDC331</color>
+	<color name="radio_button_stroke">#D4D4D4</color>
 	<color name="top_bar_background">#FBD22A</color>
 	<color name="top_bar_background_center">#FFD12B</color>
 	<color name="top_bar_divider">#E4C143</color>
