fix image scaling

--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -6,6 +6,7 @@
 	<item name="card_corner_radius" format="float" type="dimen">17</item>
 	<dimen name="card_image_padding_left">6.6dp</dimen>
 	<dimen name="card_image_padding_right">1dp</dimen>
+	<dimen name="card_image_padding_top">15dp</dimen>
 	<dimen name="card_list_padding_left">14dp</dimen>
 	<dimen name="card_list_padding_right">17.6dp</dimen>
 	<dimen name="card_list_padding_top">80.3dp</dimen>
