--- a/app/src/main/res/layout/card.xml
+++ b/app/src/main/res/layout/card.xml
@@ -65,6 +65,10 @@
 			android:id="@+id/image"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:scaleType="fitStart"
+			android:adjustViewBounds="true"
+			android:paddingTop="@dimen/card_image_padding_top"
+			android:paddingBottom="@dimen/card_image_padding_top"
 			android:paddingLeft="@dimen/card_image_padding_left"
 			android:paddingRight="@dimen/card_image_padding_right"
 			android:visibility="gone" />
